Fix CodeRabbit issues in PR #1376